<resources>
    <string name="app_name">convertorUnidades</string>
    <string name="conversor_de_unidades">Conversor de Unidades</string>
    <string name="sobre">Sobre</string>
    <string name="comprimento">Comprimento</string>
    <string name="velocidade">Velocidade</string>
    <string name="temperatura">Temperatura</string>
    <string name="volume">Volume</string>
    <string name="peso">Peso</string>
    <string name="digite_o_valor">Digite o valor</string>
    <string name="alternarUnidades">⇅</string>
    <string name="resultado">Resultado</string>
    <string name="limpar">LIMPAR</string>
    <string name="converter">CONVERTER</string>
    <string name="historico_de_conversoes">Histórico de Conversões</string>
    <string name="limpar_historico">Limpar Histórico</string>
    <string name="exemplo_de_conversao">Exemplo de Conversão</string>
    <string name="comprimentoCategoria">Comprimento</string>
    <string name="enviar_sms">Enviar SMS</string>
    <string name="hint_endereco">Digite o endereço...</string>
    <string name="buscar">Buscar</string>
    <string name="hin_latitude">Lat (-2.52)</string>
    <string name="hint_longitude">Lng (-44.30)</string>
    <string name="irCoordenadas">Ir Coord</string>
    <string name="json_consumir">Consumir Dados Externos (HTTP/JSON)</string>
    <string-array name="dados_fake_historico">
        <item>10 km = 6.21 miles</item>
        <item>100 °C = 212 °F</item>
        <item>5 kg = 11.02 lbs</item>
        <item>1.5 m = 150 cm</item>
        <item>32 °F = 0 °C</item>
    </string-array>
</resources>